--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site is created using weatherstack api</p>
         <img class="potrait"src="./image/download.jpeg">
     </div>
     
